Update Лабораторная Работа Новицкая 3162.md

--- a/Лабораторная Работа Новицкая 3162.md
+++ b/Лабораторная Работа Новицкая 3162.md
@@ -1,11 +1,39 @@
+Новицкая Елизавета К3162
+
+1)Я скачала Ubuntu через UTM на MacOs
+
+2)Вызвала терминал
+
+
+
 <img width="500" src="1.png"/>
+
+3)Создала файл script.bash через команду touch
+
 <img width="500" src="2.png"/>
+
+4)Открыла созданный файл для редактирования через команду gedit
 <img width="500" src="3.png"/>
 <img width="500" src="4.png"/>
+
+5)Прописала команду, выводящую предложение "Welcome to ITMO UNiversity"
 <img width="500" src="5.png"/>
+
+
+6)Вывела предложение в терминале через команду bash
+
 <img width="500" src="6.png"/>
 <img width="500" src="7.png"/>
+
+7)Для выполнения задачи я воспользовалась информацией с сайта selectel.ru, руководство по написанию скриптов Linux Bash
 <img width="500" src="8.png"/>
+
+
+8)После слова "Welcome, " я ввела переменную $@, которая выведет все последущие слова после команды bash script.bash
 <img width="500" src="9.png"/>
 <img width="500" src="10.png"/>
+
+
+9)Проверка на большее количество слов
+
 <img width="500" src="11.png"/>
